write out predictors MAS 2018-2022

--- a/data/processed/.gitignore
+++ b/data/processed/.gitignore
@@ -6,4 +6,5 @@ trend_aup_excel.csv
 steekproef_piloot_controle_gmaps.csv
 MAS netwerk Vlaanderen- Westelijke_leemstreek_telpunten.csv
 MAS netwerk Vlaanderen- Zandleemstreek_telpunten.csv
+verklarende_variabelen_2018_2022.csv
 !.gitignore
