--- a/data/processed/.gitignore
+++ b/data/processed/.gitignore
@@ -7,4 +7,5 @@ steekproef_piloot_controle_gmaps.csv
 MAS netwerk Vlaanderen- Westelijke_leemstreek_telpunten.csv
 MAS netwerk Vlaanderen- Zandleemstreek_telpunten.csv
 verklarende_variabelen_2018_2022.csv
+MAS_data_full_2018_2022.csv
 !.gitignore
